--- a/index.html
+++ b/index.html
@@ -492,14 +492,45 @@
 			new Chart(document.getElementById("chartjs-dashboard-line"), {
 				type: "line",
 				data: {
-					labels: ["Beras Medium", "Bawang Merah", "Bawang Putih Bonggol","Cabai Merah Keriting", "Cabai Rawit Merah", "Daging Ayam Ras", "Telur Ayam Ras","Gula Konsumsi"],
+					labels: ["1 Jan",
+				"2 Jan",
+				"3 Jan",
+				"4 Jan",
+				"5 Jan",
+				"6 Jan",
+				"7 Jan",
+				"8 Jan",
+				"9 Jan",
+				"10 Jan",
+				"11 Jan",
+				"12 Jan",
+				"13 Jan",
+				"14 Jan",
+				"15 Jan",
+				"16 Jan",
+				"17 Jan",
+				"18 Jan",
+				"19 Jan",
+				"20 Jan",
+				"21 Jan",
+				"22 Jan",
+				"23 Jan",
+				"24 Jan",
+				"25 Jan",
+				"26 Jan",
+				"27 Jan",
+				"28 Jan",
+				"29 Jan",
+				"30 Jan",
+				"31 Jan",],
 					datasets: [{
 						label: "Sales ($)",
 						fill: true,
 						backgroundColor: gradient,
 						borderColor: window.theme.primary,
 						data: [
-						14008, 37306, 39372, 75002, 72433, 44056, 32060, 17797
+						63660,	64560,	65730,	66140,	64990,	64940,	66000,	65200,	65330,	65200,	63860,	63920,	65760, 65380,	68800, 71120,	70240,	71030,	71460,	72170,	71610,	73130,	73390,	73690,	73410,	72960,	74210,	76520,	75690,	76100,	75140
+					
 						]
 					}]
 				},
